--- a/src/App.scss
+++ b/src/App.scss
@@ -56,3 +56,34 @@
 .input {
   flex: 0 0 400px;
 }
+
+.body{
+  &__row {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  &__item {
+    margin: 10px;
+    padding: 10px;
+    flex: 0 1 30.333%;
+    border: solid #e7e7e7;
+    border-radius: 3%;
+    min-height: 350px;
+  }
+  &__item img {
+    max-width: 100%;
+  }
+  &__column {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+  }
+  &__group {
+    display: flex;
+    flex: 0 1 100%;
+    flex-wrap: wrap;
+    border: solid #e7e7e7;
+    margin: 10px 0;
+    border-radius: 1%;
+  }
+}
